# owlutils

./: .pypirc  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
owlutils/: __init__.py  parsing.py
tests/: test_parsing.py
